--- a/assign2/app.yaml
+++ b/assign2/app.yaml
@@ -1,13 +1,14 @@
-version: 1
 runtime: python27
 api_version: 1
-threadsafe: true
+threadsafe: yes
 
 libraries:
 - name: webapp2
   version: latest
 - name: jinja2
-  version: latest
+  version: "2.6"
+- name: markupsafe
+  version: "0.15"
 
 handlers:
 - url: /stylesheets
